[workspace]
resolver = "2"
members = [
    "aoc",
    "aoc_common",
    "d01",
    "d02",
    "d03",
    "d04",
    "d05",
    "d06",
    "d07",
    "d08",
    "d09",
    "d10", "d11", "d12",
]

[workspace.dependencies]
ndarray = "=0.16.1"
rayon = "=1.10.0"
rustc-hash = "2.1.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
